--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/HarshCV/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="pricing-container">
+      <div class="box-1">
+        <h2>Keep it Sporty</h2>
+        <p>Shoes to keep you active</p>
+        <button class="box1-btn">View Collection</button>
+        <div class="shoe-img">
+          <img src="/assets/img/sporty.png" />
+        </div>
+      </div>
+      <div class="box-1">
+        <h2>Keep it Sporty</h2>
+        <p>Shoes to keep you active</p>
+        <button class="box1-btn">View Collection</button>
+        <div class="shoe-img">
+          <img src="/assets/img/sporty.png" />
+        </div>
+      </div>
       <div class="box-1">
         <h2>Keep it Sporty</h2>
         <p>Shoes to keep you active</p>
