--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
         <div class="shoe-img">
-          <img src="/assets/img/sporty.png" />
+          <img src="../shoe-pricing/assets/img/sporty.png" />
         </div>
       </div>
       <div class="box-1">
