--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="pricing-container">
-      <div class="box-1">
+      <div class="box box-1">
         <h2>Keep it Sporty</h2>
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
@@ -16,16 +16,16 @@
           <img src="../shoe-pricing/assets/img/sporty.png" />
         </div>
       </div>
-      <div class="box-1">
-        <h2>Keep it Sporty</h2>
+      <div class="box box-2">
+        <h2>Keep it Casual</h2>
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
         <div class="shoe-img">
-          <img src="/assets/img/sporty.png" />
+          <img src="/assets/img/casual.png" />
         </div>
       </div>
-      <div class="box-1">
-        <h2>Keep it Sporty</h2>
+      <div class="box box-3">
+        <h2>Keep it Casual</h2>
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
         <div class="shoe-img">
