--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="box box-2">
         <h2>Keep it Casual</h2>
         <p>Shoes to keep you active</p>
-        <button class="box1-btn">View Collection</button>
+        <button class="box2-btn">View Collection</button>
         <div class="shoe-img">
-          <img src="/assets/img/casual.png" />
+          <img src="../shoe-pricing/assets/img/casual.png" />
         </div>
       </div>
       <div class="box box-3">
