--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
       </div>
       <div class="box box-3">
-        <h2>Keep it Casual</h2>
+        <h2>Keep it Formal</h2>
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
         <div class="shoe-img">
-          <img src="/assets/img/sporty.png" />
+          <img src="../shoe-pricing/assets/img/formal.png" />
         </div>
       </div>
     </div>
