--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
         <div class="shoe-img">
-          <img src="../shoe-pricing/assets/img/sporty.png" />
+          <img src="assets/img/sporty.png" />
         </div>
       </div>
       <div class="box box-2">
@@ -21,7 +21,7 @@
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
         <div class="shoe-img">
-          <img src="../shoe-pricing/assets/img/casual.png" />
+          <img src="assets/img/casual.png" />
         </div>
       </div>
       <div class="box box-3">
@@ -29,7 +29,7 @@
         <p>Shoes to keep you active</p>
         <button class="box1-btn">View Collection</button>
         <div class="shoe-img">
-          <img src="../shoe-pricing/assets/img/formal.png" />
+          <img src="assets/img/formal.png" />
         </div>
       </div>
     </div>
